--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -87,5 +87,27 @@
               </a>
       </li>
 
+      <!--Login page
+      <li class="nav-item">
+        <% if(title=="Login" ) { %>
+          <a class="nav-link active" href="/login">
+            <%} else {%>
+              <a class="nav-link" href="/login">
+                <%} %>
+                  <i class="fas fa-users"></i> Login
+              </a>
+      </li>-->
+
+     
+      <li class="nav-item">
+        <% if(title=="Login" ) { %>
+          <a class="nav-link active" href="/login">
+            <%} else {%>
+              <a class="nav-link" href="/login">
+                <%} %>
+                  <i class="fas fa-users"></i> Login
+              </a>
+      </li>
+
     </ul>
   </nav>
